HTML header code and video import

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Jamie Vos</title>
 </head>
 <body>
- 
+  <header class="v-header container">
+      <div class="fullscreen-video-wrap">
+          <video src="Scrolling_Code_Trim.mp4" type="video/mp4" autoplay="autoplay" loop="true" muted="true"></video>
+      </div>
+      <div class="header-overlay"></div>
+      <div class="header-content">
+          <h1>Hello Everyone</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem tenetur, perspiciatis temporibus sapiente in alias? Voluptates non accusantium blanditiis doloribus.</p>
+          <a href="#" class="btn">Read More</a>
+      </div>
+  </header>
 </body>
 </html>
