Section HTML code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,20 @@
           <a href="#" class="btn">Read More</a>
       </div>
   </header>
+
+  <section class="section section-a">
+    <div class="container">
+      <h1>Section A</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae. Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
+    </div>
+  </section>
+
+  <section class="section section-b">
+    <div class="container">
+        <h1>Section B</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae. Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
+    </div>
+  </section>
+
 </body>
 </html>
