--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Jamie Vos</title>
 </head>
 <body>
-  <header class="v-header container">
+    <nav>
+        <a href="#">Projects</a>
+        <a href="#">About me</a>
+    </nav>
+    <header class="v-header container">
       <div class="fullscreen-video-wrap">
           <video src="Scrolling_Code_Trim.mp4" type="video/mp4" autoplay="autoplay" loop="true" muted="true"></video>
       </div>
@@ -18,7 +22,7 @@
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem tenetur, perspiciatis temporibus sapiente in alias? Voluptates non accusantium blanditiis doloribus.</p>
           <a href="#" class="btn">Read More</a>
       </div>
-  </header>
+    </header>
 
   <section class="section section-a">
     <div class="container">
