--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 
 <body>
 
+  <nav>
+    <div class="menu">
+      <a href='#section-1'>About Me</a>
+      <a href='#section-2'>Projects</a>
+      <a href='#section-3'>Skills</a>
+      <a href='#section-4'>Contact Me</a>
+    </div>
+  </nav>
+
   <div class="loader-bg">
     <div class="loader">
       <div class="dots"></div>
@@ -24,7 +33,7 @@
 
   <header class="header container">
     <div class="fullscreen-video-wrap">
-      <video src="Laptop_1_Videvo.mov" type="video/mp4" autoplay="autoplay" loop="true" muted="true"></video>
+      <video src="Laptop_1_Video.mov" type="video/mp4" autoplay="autoplay" loop="true" muted="true"></video>
     </div>
     <div class="header-overlay"></div>
     <div class="header-content">
@@ -46,13 +55,7 @@
   </section>
 
   <section class="section section-b" id="section-2">
-    <div class="container">
-      <h1>Projects</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur
-        asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae.
-        Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit
-        iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
-    </div>
+    
   </section>
 
   <section class="section section-c" id="section-3">
@@ -77,6 +80,7 @@
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
 
+  <script src="app.js">s</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script>
     setTimeout(function () {
