Social media links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Jamie Vos</title>
 </head>
 
@@ -17,7 +20,7 @@
       <a href='#section-1'>About Me</a>
       <a href='#section-2'>Projects</a>
       <a href='#section-3'>Skills</a>
-      <a href='#section-4'>Contact Me</a>
+      <a href='#section-4'>Contact</a>
     </div>
   </nav>
 
@@ -55,7 +58,7 @@
   </section>
 
   <section class="section section-b" id="section-2">
-    
+
   </section>
 
   <section class="section section-c" id="section-3">
@@ -69,13 +72,32 @@
   </section>
 
   <section class="section section-d" id="section-4">
-    <div class="container">
-      <h1>Contact</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur
-        asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae.
-        Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit
-        iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
-    </div>
+    <ul>
+      <li>
+        <a href="#">
+          <i class="fa fa-github"></i>
+          <span> GitHub </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-instagram"></i>
+          <span> Instagram </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-youtube"></i>
+          <span> Youtube </span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <i class="fa fa-linkedin"></i>
+          <span> Linkedin </span>
+        </a>
+      </li>
+    </ul>
   </section>
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
