--- a/index.html
+++ b/index.html
@@ -74,25 +74,25 @@
   <section class="section section-d" id="section-4">
     <ul>
       <li>
-        <a href="#">
+        <a href="https://github.com/JamieVos991">
           <i class="fa fa-github"></i>
           <span> GitHub </span>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://www.instagram.com/jv._0224/">
           <i class="fa fa-instagram"></i>
           <span> Instagram </span>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://www.youtube.com/channel/UCGcCCIBv7Gchg-hgh_8_l7A">
           <i class="fa fa-youtube"></i>
           <span> Youtube </span>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://www.linkedin.com/in/jamie-vos-0a0b4a18a/">
           <i class="fa fa-linkedin"></i>
           <span> Linkedin </span>
         </a>
