--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <a href='#section-1'>About Me</a>
       <a href='#section-2'>Projects</a>
       <a href='#section-3'>Skills</a>
-      <a href='#section-4'>Contact</a>
+      <a href='#section-4'>Blogs</a>
+      <a href='#section-5'>Contact</a>
     </div>
   </nav>
 
@@ -72,6 +73,16 @@
   </section>
 
   <section class="section section-d" id="section-4">
+    <div class="container">
+      <h1>Blog</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur
+        asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae.
+        Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit
+        iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
+    </div>
+  </section>
+
+  <section class="section section-e" id="section-5">
     <ul>
       <li>
         <a href="https://github.com/JamieVos991">
