--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
   <nav>
     <div class="menu">
-      <a href='#section-1'>About Me</a>
-      <a href='#section-2'>Projects</a>
-      <a href='#section-3'>Skills</a>
-      <a href='#section-4'>Blogs</a>
-      <a href='#section-5'>Contact</a>
+      <a href='#section-1'> About Me </a>
+      <a href='#section-2'> Projects </a>
+      <a href='#section-3'> Skills </a>
+      <a href='#section-4'> Blogs </a>
+      <a href='#section-5'> Contact </a>
     </div>
   </nav>
 
@@ -74,7 +74,6 @@
 
   <section class="section section-d" id="section-4">
     <div class="container">
-<<<<<<< HEAD
       <h1>Blog</h1>
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur
         asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae.
@@ -84,6 +83,7 @@
   </section>
 
   <section class="section section-e" id="section-5">
+    <h1 class="socials-title">Find me on...</h1>
     <ul>
       <li>
         <a href="https://github.com/JamieVos991">
@@ -110,41 +110,10 @@
         </a>
       </li>
     </ul>
-=======
-      <h1>Socials</h1>
-      <ul>
-        <li>
-          <a href="https://github.com/JamieVos991">
-            <i class="fa fa-github"></i>
-            <span> GitHub </span>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.instagram.com/jv._0224/">
-            <i class="fa fa-instagram"></i>
-            <span> Instagram </span>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.youtube.com/channel/UCGcCCIBv7Gchg-hgh_8_l7A">
-            <i class="fa fa-youtube"></i>
-            <span> Youtube </span>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/jamie-vos-0a0b4a18a/">
-            <i class="fa fa-linkedin"></i>
-            <span> Linkedin </span>
-          </a>
-        </li>
-      </ul>
-    </div>
->>>>>>> e7a9a645a68b7db0ab79bc8af81bfa25b61475d2
   </section>
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
 
-  <script src="app.js">s</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script>
     setTimeout(function () {
