--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
   </section>
 
   <section class="section section-b" id="section-2">
-
+    <div class="container">
+      <h1>Projects</h1>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur
+        asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae.
+        Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit
+        iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
+    </div>
   </section>
 
   <section class="section section-c" id="section-3">
