--- a/index.html
+++ b/index.html
@@ -69,13 +69,18 @@
   </section>
 
   <section class="section section-c" id="section-3">
-    <div class="container">
-      <h1>Skills</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur
-        asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae.
-        Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit
-        iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
-    </div>
+      <h1 class="title-skills">Skills</h1>
+        <div class="circles">
+          <div class="circle-1">
+            Javascript
+          </div>
+          <div class="circle-2">
+            CSS
+          </div>
+          <div class="circle-3">
+            JSON
+          </div>
+        </div>
   </section>
 
   <section class="section section-d" id="section-4">
