--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
   <section class="section section-a" id="section-1">
     <div class="container">
       <h1>About Me</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur
-        asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae.
-        Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit
-        iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
+      <p>I'm Jamie, a front-end web developer from Amsterdam, the Netherlands. In July 2024 I graduated from </p>
     </div>
   </section>
 
@@ -72,13 +69,13 @@
       <h1 class="title-skills">Skills</h1>
         <div class="circles">
           <div class="circle-1">
-            Javascript
+            { }
           </div>
           <div class="circle-2">
-            CSS
+            { }
           </div>
           <div class="circle-3">
-            JSON
+            { }
           </div>
         </div>
   </section>
