--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Jamie Vos</title>
 </head>
-
+ 
 <body>
 
   <nav>
     <div class="openMenu"><i class="fa fa-bars"></i></div>
     <div class="menu">
-      <a href="#">Home</a>
       <a href='#section-1'> About Me </a>
       <a href='#section-2'> Projects </a>
       <a href='#section-3'> Skills </a>
@@ -27,9 +26,9 @@
       <a href='#section-5'> Contact </a>
       <div class="closeMenu"><i class="fa fa-times"></i></div>
       <span class="icons">
-        <i class="fab fa-facebook"></i>
+        <i class="fab fa-linkedin"></i>
         <i class="fab fa-instagram"></i>
-        <i class="fab fa-twitter"></i>
+        <i class="fab fa-youtube"></i>
         <i class="fab fa-github"></i>
     </span>
     </div>
@@ -61,20 +60,72 @@
   <section class="section section-a" id="section-1">
     <div class="container">
       <h1>About Me</h1>
-      <p>I'm Jamie, a front-end web developer from Amsterdam, the Netherlands. In July 2024 I graduated from </p>
+      <p>My name is Jamie and I am a software engineer specialized in both front and back-end applications. I started web development in 2018 and acquired a strong knowledge and expertise in this field over time. 
+        Web applications, building websites and building apps are subjects that i can work good with. I do my best to improve myself in these fields but I also try to open my perspective to other domains. 
+      </p>
+      <h3>
+        What am i looking for?
+      </h3>
+      <p>
+        Challenge motivates me. Even if I have mainly worked on PHP and JS applications, I crave opportunities to discover new technologies and concepts.
+        <br><br>
+        I love learning. If you use programming languages or tools that I have not already mastered, I probably already heard about it and I definitely am confident that I can quickly become proficient with it.
+        <br><br>
+        I am interested in various topics. Pure development, architecture and clean code, scalability and performance concerns, monitoring and SRE are all topics that I am interested in. And there are a lot more! 
+      </p>
     </div>
   </section>
 
   <section class="section section-b" id="section-2">
-    <div class="container">
-      <h1>Projects</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur
-        asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae.
-        Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit
-        iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
-    </div>
+    <section id="projects">
+      <div class="card-container">
+        <!-- project-card changed to project-tile -->
+        <div class="project-tile">
+          <img src="Untitled-2.jpg" alt="New Horizons Product Landing Page">
+          <div class="project-desc">
+            <p>Input-Output</p>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+          </div>
+        </div>  
+         <div class="project-tile">
+          <img src="Untitled-1.jpg" alt="JavaScript Algorithm Playground">
+          <div class="project-desc">
+            <p>Arcade Mechanics</p>
+            <a href="https://github.com/JamieVos991/Arcade-Mechanics-F1M3" target="_blank" class="view-project-button">View Project</a>
+          </div>
+        </div>
+        <div class="project-tile">
+          <img src="Drill.jpg" alt="New Horizons Product Landing Page">
+          <div class="project-desc">
+            <p>Politie ZO challenge</p>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+          </div>
+        </div>
+        <div class="project-tile">
+          <img src="Drill.jpg" alt="New Horizons Product Landing Page">
+          <div class="project-desc">
+            <p>Politie ZO challenge</p>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+          </div>
+        </div>
+        <div class="project-tile">
+          <img src="Drill.jpg" alt="New Horizons Product Landing Page">
+          <div class="project-desc">
+            <p>Politie ZO challenge</p>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+          </div>
+        </div>
+        <div class="project-tile">
+          <img src="Drill.jpg" alt="New Horizons Product Landing Page">
+          <div class="project-desc">
+            <p>Politie ZO challenge</p>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </section>
-
+<!-- 
   <section class="section section-c" id="section-3">
       <h1 class="title-skills">Skills</h1>
         <div class="circles">
@@ -88,7 +139,7 @@
             { }
           </div>
         </div>
-  </section>
+  </section> -->
 
   <section class="section section-d" id="section-4">
     <div class="container">
@@ -101,33 +152,47 @@
   </section>
 
   <section class="section section-e" id="section-5">
-    <h1 class="socials-title">Find me on...</h1>
-    <ul>
-      <li>
-        <a href="https://github.com/JamieVos991">
-          <i class="fa fa-github"></i>
-          <span> GitHub </span>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.instagram.com/jv._0224/">
-          <i class="fa fa-instagram"></i>
-          <span> Instagram </span>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.youtube.com/channel/UCGcCCIBv7Gchg-hgh_8_l7A">
-          <i class="fa fa-youtube"></i>
-          <span> Youtube </span>
-        </a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/jamie-vos-0a0b4a18a/">
-          <i class="fa fa-linkedin"></i>
-          <span> Linkedin </span>
-        </a>
-      </li>
-    </ul>
+    <div class="container-form">
+      <h1 class="brand"><span>Contact</span> Jamie Vos</h1>
+      <div class="wrapper animated bounceInLeft">
+        <div class="company-info">
+          <h3>Acme Web Design</h3>
+          <ul>
+            <li><i class="fa fa-road"></i> Schagen</li>
+            <li><i class="fa fa-phone"></i> (+31) 0613896402</li>
+            <li><i class="fa fa-envelope"></i> Jamievos100@gmail.com</li>
+          </ul>
+        </div>
+        <div class="contact">
+          <h3>Email Us</h3>
+          <form>
+            <p>
+              <label>Name</label>
+              <input type="text" name="name">
+            </p>
+            <p>
+              <label>Company</label>
+              <input type="text" name="company">
+            </p>
+            <p>
+              <label>Email Address</label>
+              <input type="email" name="email">
+            </p>
+            <p>
+              <label>Phone Number</label>
+              <input type="text" name="phone">
+            </p>
+            <p class="full">
+              <label>Message</label>
+              <textarea name="message" rows="5"></textarea>
+            </p>
+            <p class="full">
+              <button>Submit</button>
+            </p>
+          </form>
+        </div>
+      </div>
+    </div>
   </section>
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
