About me pagina

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <nav>
     <div class="openMenu"><i class="fa fa-bars"></i></div>
     <div class="menu">
+      <a href="#" class="home">Home</a>
       <a href='#section-1'> About Me </a>
       <a href='#section-2'> Projects </a>
       <a href='#section-3'> Skills </a>
@@ -58,7 +59,23 @@
   </header>
 
   <section class="section section-a" id="section-1">
-    <div class="container">
+  
+    <section class="about">
+      <div class="content">
+        <img src="Drill.jpg">
+        <div class="text">
+          <h1>About Me</h1>
+          <h5>Developer & Designer</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nulla aperiam aliquid laborum aut similique dolorem voluptatem? Doloribus praesentium natus nemo, aperiam consequuntur, autem fuga soluta eaque neque magni nihil.
+          Libero, sed totam magni nisi veritatis ad iure ipsa, ex expedita cumque officia quas omnis error incidunt laboriosam soluta eum rerum voluptate amet natus sunt. Quaerat quo voluptate eius veniam.
+          Officia nihil quisquam dolor tenetur repellendus quidem delectus sapiente deserunt unde excepturi a, voluptatibus amet natus porro quas. Asperiores quasi eius sint odio ex? Nam laborum provident qui fugit dolorem.
+          Fugiat commodi voluptate magni, quae voluptas veniam officia deserunt rem fuga. Natus culpa doloribus laudantium aliquam vel, eum, impedit nobis dicta voluptatibus tempora commodi. Commodi rerum similique suscipit odit quos?
+          Sapiente veniam nisi id eligendi molestiae repellendus eaque omnis tempora rem a, sequi obcaecati sint dolores nihil eos quia porro repellat ex impedit dolor, autem maiores amet. Vel, earum possimus?</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- <div class="container">
       <h1>About Me</h1>
       <p>My name is Jamie and I am a software engineer specialized in both front and back-end applications. I started web development in 2018 and acquired a strong knowledge and expertise in this field over time. 
         Web applications, building websites and building apps are subjects that i can work good with. I do my best to improve myself in these fields but I also try to open my perspective to other domains. 
@@ -73,7 +90,7 @@
         <br><br>
         I am interested in various topics. Pure development, architecture and clean code, scalability and performance concerns, monitoring and SRE are all topics that I am interested in. And there are a lot more! 
       </p>
-    </div>
+    </div> -->
   </section>
 
   <section class="section section-b" id="section-2">
@@ -122,13 +139,35 @@
             <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
           </div>
         </div>
+        <div class="project-tile">
+          <img src="Drill.jpg" alt="New Horizons Product Landing Page">
+          <div class="project-desc">
+            <p>Politie ZO challenge</p>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+          </div>
+        </div>
+        <div class="project-tile">
+          <img src="Drill.jpg" alt="New Horizons Product Landing Page">
+          <div class="project-desc">
+            <p>Politie ZO challenge</p>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+          </div>
+        </div>
+        <div class="project-tile">
+          <img src="Drill.jpg" alt="New Horizons Product Landing Page">
+          <div class="project-desc">
+            <p>Politie ZO challenge</p>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+          </div>
+        </div>
+        
       </div>
     </section>
   </section>
-<!-- 
+ 
   <section class="section section-c" id="section-3">
       <h1 class="title-skills">Skills</h1>
-        <div class="circles">
+        <!-- <div class="circles">
           <div class="circle-1">
             { }
           </div>
@@ -138,8 +177,8 @@
           <div class="circle-3">
             { }
           </div>
-        </div>
-  </section> -->
+        </div> -->
+  </section> 
 
   <section class="section section-d" id="section-4">
     <div class="container">
@@ -153,18 +192,19 @@
 
   <section class="section section-e" id="section-5">
     <div class="container-form">
-      <h1 class="brand"><span>Contact</span> Jamie Vos</h1>
       <div class="wrapper animated bounceInLeft">
         <div class="company-info">
-          <h3>Acme Web Design</h3>
           <ul>
-            <li><i class="fa fa-road"></i> Schagen</li>
+            <li><i class="fa fa-road"></i> Amsterdam</li>
             <li><i class="fa fa-phone"></i> (+31) 0613896402</li>
-            <li><i class="fa fa-envelope"></i> Jamievos100@gmail.com</li>
+            <li><i class="fa fa-github"></i> <a href="gitub.com/JamieVos991">JamieVos991</a></li>
+            <li><i class="fa fa-linkedin"></i> Jamie Vos</li>
+            <li><i class="fa fa-youtube"></i> Theie</li>
+            <li><i class="fa fa-instagram"></i> Jv._0224</li>
           </ul>
         </div>
         <div class="contact">
-          <h3>Email Us</h3>
+          <h3>Email Me</h3>
           <form>
             <p>
               <label>Name</label>
