--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+    integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Jamie Vos</title>
 </head>
- 
+
 <body>
 
   <nav>
@@ -31,7 +32,7 @@
         <i class="fab fa-instagram"></i>
         <i class="fab fa-youtube"></i>
         <i class="fab fa-github"></i>
-    </span>
+      </span>
     </div>
   </nav>
 
@@ -59,39 +60,30 @@
   </header>
 
   <section class="section section-a" id="section-1">
-  
+
     <section class="about">
       <div class="content">
-        <img src="Drill.jpg">
+        <img src="a.JPG">
         <div class="text">
           <h1>About Me</h1>
           <h5>Developer & Designer</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, nulla aperiam aliquid laborum aut similique dolorem voluptatem? Doloribus praesentium natus nemo, aperiam consequuntur, autem fuga soluta eaque neque magni nihil.
-          Libero, sed totam magni nisi veritatis ad iure ipsa, ex expedita cumque officia quas omnis error incidunt laboriosam soluta eum rerum voluptate amet natus sunt. Quaerat quo voluptate eius veniam.
-          Officia nihil quisquam dolor tenetur repellendus quidem delectus sapiente deserunt unde excepturi a, voluptatibus amet natus porro quas. Asperiores quasi eius sint odio ex? Nam laborum provident qui fugit dolorem.
-          Fugiat commodi voluptate magni, quae voluptas veniam officia deserunt rem fuga. Natus culpa doloribus laudantium aliquam vel, eum, impedit nobis dicta voluptatibus tempora commodi. Commodi rerum similique suscipit odit quos?
-          Sapiente veniam nisi id eligendi molestiae repellendus eaque omnis tempora rem a, sequi obcaecati sint dolores nihil eos quia porro repellat ex impedit dolor, autem maiores amet. Vel, earum possimus?</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- <div class="container">
-      <h1>About Me</h1>
-      <p>My name is Jamie and I am a software engineer specialized in both front and back-end applications. I started web development in 2018 and acquired a strong knowledge and expertise in this field over time. 
-        Web applications, building websites and building apps are subjects that i can work good with. I do my best to improve myself in these fields but I also try to open my perspective to other domains. 
-      </p>
-      <h3>
-        What am i looking for?
-      </h3>
-      <p>
-        Challenge motivates me. Even if I have mainly worked on PHP and JS applications, I crave opportunities to discover new technologies and concepts.
+          <p>My name is Jamie and I am a software engineer specialized in both front and back-end applications. I started web development in 2018 and acquired a strong knowledge and expertise in this field over time. 
+            Web applications, building websites and building apps are subjects that i can work good with. I do my best to improve myself in these fields but I also try to open my perspective to other domains. 
+          <br>
+          <br>
+          What am i looking for?
+          <br>
+          Challenge motivates me. Even if I have mainly worked on PHP and JS applications, I crave opportunities to discover new technologies and concepts.
         <br><br>
         I love learning. If you use programming languages or tools that I have not already mastered, I probably already heard about it and I definitely am confident that I can quickly become proficient with it.
         <br><br>
         I am interested in various topics. Pure development, architecture and clean code, scalability and performance concerns, monitoring and SRE are all topics that I am interested in. And there are a lot more! 
-      </p>
-    </div> -->
-  </section>
+          </p>
+
+        </div>
+      </div>
+    </section>
+  </section> 
 
   <section class="section section-b" id="section-2">
     <section id="projects">
@@ -101,92 +93,151 @@
           <img src="Untitled-2.jpg" alt="New Horizons Product Landing Page">
           <div class="project-desc">
             <p>Input-Output</p>
-            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+              Project</a>
           </div>
-        </div>  
-         <div class="project-tile">
+        </div>
+        <div class="project-tile">
           <img src="Untitled-1.jpg" alt="JavaScript Algorithm Playground">
           <div class="project-desc">
             <p>Arcade Mechanics</p>
-            <a href="https://github.com/JamieVos991/Arcade-Mechanics-F1M3" target="_blank" class="view-project-button">View Project</a>
+            <a href="https://github.com/JamieVos991/Arcade-Mechanics-F1M3" target="_blank"
+              class="view-project-button">View Project</a>
           </div>
         </div>
         <div class="project-tile">
           <img src="Drill.jpg" alt="New Horizons Product Landing Page">
           <div class="project-desc">
             <p>Politie ZO challenge</p>
-            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+              Project</a>
           </div>
         </div>
         <div class="project-tile">
           <img src="Drill.jpg" alt="New Horizons Product Landing Page">
           <div class="project-desc">
             <p>Politie ZO challenge</p>
-            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+              Project</a>
           </div>
         </div>
         <div class="project-tile">
           <img src="Drill.jpg" alt="New Horizons Product Landing Page">
           <div class="project-desc">
             <p>Politie ZO challenge</p>
-            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+              Project</a>
           </div>
         </div>
         <div class="project-tile">
           <img src="Drill.jpg" alt="New Horizons Product Landing Page">
           <div class="project-desc">
             <p>Politie ZO challenge</p>
-            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+              Project</a>
           </div>
         </div>
         <div class="project-tile">
           <img src="Drill.jpg" alt="New Horizons Product Landing Page">
           <div class="project-desc">
             <p>Politie ZO challenge</p>
-            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+              Project</a>
           </div>
         </div>
         <div class="project-tile">
           <img src="Drill.jpg" alt="New Horizons Product Landing Page">
           <div class="project-desc">
             <p>Politie ZO challenge</p>
-            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+              Project</a>
           </div>
         </div>
         <div class="project-tile">
           <img src="Drill.jpg" alt="New Horizons Product Landing Page">
           <div class="project-desc">
             <p>Politie ZO challenge</p>
-            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View Project</a>
+            <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+              Project</a>
           </div>
         </div>
-        
+
       </div>
     </section>
   </section>
- 
+
   <section class="section section-c" id="section-3">
-      <h1 class="title-skills">Skills</h1>
-        <!-- <div class="circles">
-          <div class="circle-1">
-            { }
-          </div>
-          <div class="circle-2">
-            { }
-          </div>
-          <div class="circle-3">
-            { }
-          </div>
-        </div> -->
-  </section> 
+    <header></header>
+    <div class="skill">
+      <div class="set">
+        <span class="fas fa-globe"></span>
+        <header>Web development</header>
+        <div class="list">
+          <label>Html</label>
+          <i class="fab fa-html5"></i>
+        </div>
+        <div class="list">
+          <label>CSS</label>
+          <i class="fab fa-css3-alt"></i>
+        </div>
+        <div class="list">
+          <label>Javascript</label>
+          <i class="fab fa-js"></i>
+        </div>
+        <div class="list">
+          <label>PHP</label>
+          <i class="fab fa-php"></i>
+        </div>
+      </div>
+
+      <div class="set">
+        <span class="fas fa-tools"></span>
+        <header>Framework</header>
+        <div class="list">
+          <label>Laravel</label>
+          <i class="fab fa-laravel"></i>
+        </div>
+        <div class="list">
+          <label>Node.js</label>
+          <i class="fab fa-node-js"></i>
+        </div>
+        <div class="list">
+          <label>Angular</label>
+          <i class="fab fa-angular"></i>
+        </div>
+        <div class="list">
+          <label>Bootstrap</label>
+          <i class="fab fa-bootstrap"></i>
+        </div>
+      </div>
+
+      <div class="set">
+        <span class="fas fa-globe"></span>
+        <header>Professional skills</header>
+        <div class="list">
+          <label>Communicate</label>
+          <i class="fa fa-phone" aria-hidden="true"></i>
+        </div>
+        <div class="list">
+          <label>Project management</label>
+          <i class="fa fa-balance-scale" aria-hidden="true"></i>
+        </div>
+        <div class="list">
+          <label>Teamwork</label>
+          <i class="fa fa-users" aria-hidden="true"></i>
+        </div>
+        <div class="list">
+          <label>Creativity</label>
+          <i class="fa fa-plus" aria-hidden="true"></i>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="section section-d" id="section-4">
     <div class="container">
       <h1>Blog</h1>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit necessitatibus facere quos consequuntur
-        asperiores mollitia quisquam architecto quidem sint, libero, veniam inventore non illo doloremque molestiae.
-        Repellat esse ipsam, similique reiciendis neque quam qui impedit dicta deserunt eos maiores nam reprehenderit
-        iure nostrum magni molestiae tempora, voluptatum libero labore soluta.</p>
+      
     </div>
   </section>
 
@@ -239,6 +290,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="app.js"></script>
+ 
   <script>
     setTimeout(function () {
       $('.loader-bg').fadeToggle();
