--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     </div>
     <div class="header-overlay"></div>
     <div class="header-content">
-      <h1>Hello World!</h1>
-      <p>Hello, I'm Jamie, a 2004 child and like many born of the generation, my relationship with coding started the
-        day I was born. In this portfolio, I document my journey into coding.</p>
+      <h1>Hello, World!</h1>
+      <p> <span class="p-curl">{</span> <span class="italic">I'm Jamie, a 2004 child and like many born of the generation, my relationship with coding started the
+        day I was born. In this portfolio, I document my journey into coding. </span> <span class="p-curl">}</span> </p>
       <a href='#section-1' class="btn">Read More</a>
     </div>
   </header>
