--- a/Code/index.html
+++ b/Code/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
     integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <title>Jamie Vos</title>
 </head>
@@ -26,7 +27,7 @@
       <!-- <li class="navbar-toggle"><i class="fas fa-bars fa-2x"></i></li> -->
       <li class="navbar-links"><a href='#About'>About</a></li>
       <li class="navbar-links"><a href="#">Projects</a></li>
-      <li class="navbar-links"><a href="#">Skills</a></li>
+      <li class="navbar-links"><a href="#">Blog</a></li>
       <li class="navbar-links"><i class="fa fa-github fa-2x"></i></li>
       <li class="navbar-links"><i class="fa fa-linkedin fa-2x"></i></li>
 
@@ -53,18 +54,18 @@
 
     <section class="about">
       
-      <div class="content show">
+      <div class="content show" data-aos="zoom-in">
         <img src="../Foto's/a.JPG">
         <div class="text">
           <h1>About Me</h1>
           <h5>Developer & Designer</h5>
-          <p>My name is Jamie and I am a web developer specialized in both front and back-end applications. I started web development in 2018 and acquired a strong knowledge and expertise in this field over time. 
+          <p>My name is Jamie and I am a web developer specialized in front-end applications. I started web development in 2018 and acquired a strong knowledge and expertise in this field over time. 
             Web applications, building websites and building apps are subjects that i can work good with. I do my best to improve myself in these fields but I also try to open my perspective to other domains. 
           <br>
           <br>
           What am i looking for?
           <br>
-          Challenge motivates me. Even if I have mainly worked on PHP and JS applications, I crave opportunities to discover new technologies and concepts.
+          Challenge motivates me. Even if I have mainly worked on CSS and JS applications, I crave opportunities to discover new technologies and concepts.
         <br><br>
         I love learning. If you use programming languages or tools that I have not already mastered, I probably already heard about it and I definitely am confident that I can quickly become proficient with it.
         <br><br>
@@ -76,17 +77,73 @@
     </section> 
   </section> 
 
+  <section class="section section-b">
+    <div class="container" data-aos="fade-right">
+      <div class="skill-bars">
+        <div class="bar">
+          <div class="info">
+            <span>HTML</span>
+          </div>
+          <div class="progress-line html">
+            <span></span>
+          </div>
+        </div>
+        <div class="bar">
+          <div class="info">
+            <span>CSS</span>
+          </div>
+          <div class="progress-line css">
+            <span></span>
+          </div>
+        </div>
+        <div class="bar">
+          <div class="info">
+            <span>jQuery</span>
+          </div>
+          <div class="progress-line jquery">
+            <span></span>
+          </div>
+        </div>
+        <div class="bar">
+          <div class="info">
+            <span>Python</span>
+          </div>
+          <div class="progress-line python">
+            <span></span>
+          </div>
+        </div>
+        <div class="bar">
+          <div class="info">
+            <span>MySQL</span>
+          </div>
+          <div class="progress-line mysql">
+            <span></span>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+  </section>
+
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a> 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="app.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
  
   <!-- <script>
     setTimeout(function () {
       $('.loader-bg').fadeToggle();
     }, 1500);
   </script> -->
+
+    <script>
+      AOS.init({
+        duration: 3000,
+        once: true,
+      });
+    </script>
 
 </body>
 
