Section id toegevoegd + overflow-x hidden op de body gezet

--- a/Code/index.html
+++ b/Code/index.html
@@ -25,6 +25,7 @@
     <ul>
       <li class="navbar-logo">Jamie Vos</li>
       <!-- <li class="navbar-toggle"><i class="fas fa-bars fa-2x"></i></li> -->
+      <li class="navbar-links"><a href='#section-2'>About</a></li>
       <li class="navbar-links"><a href='#About'>About</a></li>
       <li class="navbar-links"><a href="#">Projects</a></li>
       <li class="navbar-links"><a href="#">Blog</a></li>
@@ -77,7 +78,7 @@
     </section> 
   </section> 
 
-  <section class="section section-b">
+  <section class="section section-b" id="section-2">
     <div class="container" data-aos="fade-right">
       <div class="skill-bars">
         <div class="bar">
