--- a/Code/index.html
+++ b/Code/index.html
@@ -23,9 +23,8 @@
 
   <nav class="navbar">
     <ul>
-      <li class="navbar-logo">Jamie Vos</li>
+      <!-- <li class="navbar-logo"></li> -->
       <!-- <li class="navbar-toggle"><i class="fas fa-bars fa-2x"></i></li> -->
-      <li class="navbar-links"><a href='#section-2'>About</a></li>
       <li class="navbar-links"><a href='#About'>About</a></li>
       <li class="navbar-links"><a href="#">Projects</a></li>
       <li class="navbar-links"><a href="#">Blog</a></li>
