--- a/Code/index.html
+++ b/Code/index.html
@@ -21,18 +21,19 @@
 <body>
 
 
-  <nav class="navbar">
-    <ul>
-      <!-- <li class="navbar-logo"></li> -->
-      <!-- <li class="navbar-toggle"><i class="fas fa-bars fa-2x"></i></li> -->
-      <li class="navbar-links"><a href='#About'>About</a></li>
-      <li class="navbar-links"><a href="#">Projects</a></li>
-      <li class="navbar-links"><a href="#">Blog</a></li>
-      <li class="navbar-links"><i class="fa fa-github fa-2x"></i></li>
-      <li class="navbar-links"><i class="fa fa-linkedin fa-2x"></i></li>
-
+  <div id="navigation">
+    <div id="menu" onclick="onClickMenu()">
+      <div id="bar1" class="bar"></div>
+      <div id="bar2" class="bar"></div>
+      <div id="bar3" class="bar"></div>
+    </div>
+    <ul class="nav" id="nav">
+      <li><a href="#"></a>Go up!</li>
+      <li><a href="#"></a>About</li>
+      <li><a href="#"></a>Projects</li>
+      <li><a href="#"></a>Blog</li>
     </ul>
-  </nav>
+  </div>
 
 
   <header class="header container">
