--- a/Code/index.html
+++ b/Code/index.html
@@ -37,7 +37,7 @@
 
   <header class="header container">
     <div class="fullscreen-video-wrap">
-      <video src="../Foto's/Walking Around The Forest.mp4" type="video/mp4" autoplay="autoplay" loop="true" muted="true"></video>
+      <video src="Walking Around The Forest.mp4" type="video/mp4" autoplay="autoplay" loop="true" muted="true"></video>
     </div>
     <div class="header-overlay"></div>
     <div class="header-content">
