--- a/Code/index.html
+++ b/Code/index.html
@@ -111,7 +111,7 @@
         </div>
         <div class="bar">
           <div class="info">
-            <span>jQuery</span>
+            <span>PHP</span>
           </div>
           <div class="progress-line jquery">
             <span></span>
@@ -119,7 +119,7 @@
         </div>
         <div class="bar">
           <div class="info">
-            <span>Python</span>
+            <span>JavaScript</span>
           </div>
           <div class="progress-line python">
             <span></span>
@@ -127,7 +127,7 @@
         </div>
         <div class="bar">
           <div class="info">
-            <span>MySQL</span>
+            <span>React</span>
           </div>
           <div class="progress-line mysql">
             <span></span>
