--- a/Code/index.html
+++ b/Code/index.html
@@ -27,10 +27,10 @@
       <i class="fas fa-times"></i>
     </label>
     <ul class="list">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="#">Blog</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
   </div>
   <div class="landing_page">
@@ -136,6 +136,10 @@
       </div>
     </div>
 
+  </section>
+
+  <section class="section section-c" id="section-3">
+      <p>Hey</p>
   </section>
 
 
