--- a/Code/projects.html
+++ b/Code/projects.html
@@ -1,90 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="Css/projects.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="Css/projects.css">
+  <link rel="shortcut icon" href="Foto's/70955320.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+    integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
+
 <body>
-    <section id="projects">
-        <div class="card-container">
-           project-card changed to project-tile 
-          <div class="project-tile">
-            <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-            <div class="project-desc">
-              <p>Input-Output</p>
-              <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-                Project</a>
-            </div>
-          </div>
-          <div class="project-tile">
-            <img src="../Foto's/Drill.jpg" alt="JavaScript Algorithm Playground">
-            <div class="project-desc">
-              <p>Arcade Mechanics</p>
-              <a href="https://github.com/JamieVos991/Arcade-Mechanics-F1M3" target="_blank"
-                class="view-project-button">View Project</a>
-            </div>
-          </div>
-          <div class="project-tile">
-            <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-            <div class="project-desc">
-              <p>Politie ZO challenge</p>
-              <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-                Project</a>
-            </div>
-          </div>
-          <div class="project-tile">
-            <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-            <div class="project-desc">
-              <p>Politie ZO challenge</p>
-              <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-                Project</a>
-            </div>
-          </div>
-          <div class="project-tile">
-            <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-            <div class="project-desc">
-              <p>Politie ZO challenge</p>
-              <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-                Project</a>
-            </div>
-          </div>
-          <div class="project-tile">
-            <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-            <div class="project-desc">
-              <p>Politie ZO challenge</p>
-              <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-                Project</a>
-            </div>
-          </div>
-          <div class="project-tile">
-            <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-            <div class="project-desc">
-              <p>Politie ZO challenge</p>
-              <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-                Project</a>
-            </div>
-          </div>
-          <div class="project-tile">
-            <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-            <div class="project-desc">
-              <p>Politie ZO challenge</p>
-              <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-                Project</a>
-            </div>
-          </div>
-          <div class="project-tile">
-            <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
-            <div class="project-desc">
-              <p>Politie ZO challenge</p>
-              <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
-                Project</a>
-            </div>
-          </div>
-  
+
+  <input type="checkbox" name="" id="menuBtn">
+  <div class="menu_overlay">
+    <label for="menuBtn">
+      <i class="fas fa-times"></i>
+    </label>
+    <ul class="list">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+  <div class="landing_page">
+    <div class="menu">
+      <label for="menuBtn">
+        <i class="fas fa-bars"></i>
+      </label>
+    </div>
+  </div>
+
+  <!-- <section id="projects">
+    <div class="card-container">
+      project-card changed to project-tile
+      <div class="project-tile">
+        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
+        <div class="project-desc">
+          <p>Input-Output</p>
+          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+            Project</a>
         </div>
-      </section>
+      </div>
+      <div class="project-tile">
+        <img src="../Foto's/Drill.jpg" alt="JavaScript Algorithm Playground">
+        <div class="project-desc">
+          <p>Arcade Mechanics</p>
+          <a href="https://github.com/JamieVos991/Arcade-Mechanics-F1M3" target="_blank"
+            class="view-project-button">View Project</a>
+        </div>
+      </div>
+      <div class="project-tile">
+        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
+        <div class="project-desc">
+          <p>Politie ZO challenge</p>
+          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+            Project</a>
+        </div>
+      </div>
+      <div class="project-tile">
+        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
+        <div class="project-desc">
+          <p>Politie ZO challenge</p>
+          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+            Project</a>
+        </div>
+      </div>
+      <div class="project-tile">
+        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
+        <div class="project-desc">
+          <p>Politie ZO challenge</p>
+          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+            Project</a>
+        </div>
+      </div>
+      <div class="project-tile">
+        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
+        <div class="project-desc">
+          <p>Politie ZO challenge</p>
+          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+            Project</a>
+        </div>
+      </div>
+      <div class="project-tile">
+        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
+        <div class="project-desc">
+          <p>Politie ZO challenge</p>
+          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+            Project</a>
+        </div>
+      </div>
+      <div class="project-tile">
+        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
+        <div class="project-desc">
+          <p>Politie ZO challenge</p>
+          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+            Project</a>
+        </div>
+      </div>
+      <div class="project-tile">
+        <img src="../Foto's/Drill.jpg" alt="New Horizons Product Landing Page">
+        <div class="project-desc">
+          <p>Politie ZO challenge</p>
+          <a href="https://github.com/JamieVos991/MadeByMA" target="_blank" class="view-project-button">View
+            Project</a>
+        </div>
+      </div>
+
+    </div>
+  </section> -->
+
+  <script src="Js/app.js"></script>
 </body>
+
 </html>
