--- a/Code/index.html
+++ b/Code/index.html
@@ -5,21 +5,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Title -->
+  <title>Jamie Vos</title>
+  
+  <!-- CSS -->
   <link rel="stylesheet" href="Css/style.css">
+
+  <!-- Shortcut icon -->
   <link rel="shortcut icon" href="Foto's/70955320.png" type="image/x-icon" />
+
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
-    integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
-    integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-  <title>Jamie Vos</title>
 </head>
 
 <body>
-
 
   <input type="checkbox" name="" id="menuBtn">
   <div class="menu_overlay">
@@ -49,19 +53,14 @@
     </div>
     <div class="header-overlay"></div>
     <div class="header-content">
-
       <h1>Hello stranger... <br>Its okay, you can<br> scroll down. <span>🎃</span></h1>
       <!-- <p> <span class="p-curl">{</span> <span class="italic">I'm Jamie, a 2004 child and like many born of the generation, my relationship with coding started the
         day I was born.<br> In this portfolio, I document my journey into coding. </span> <span class="p-curl"> } </span> </p> -->
     </div>
-
-
   </header>
 
   <section class="section section-a" id="About">
-
     <section class="about">
-
       <div class="content show" data-aos="zoom-in">
         <img src="Foto's/a.JPG">
         <div class="text">
@@ -84,10 +83,13 @@
             I am interested in various topics. Pure development, architecture and clean code, scalability and
             performance concerns, monitoring and SRE are all topics that I am interested in. And there are a lot more!
           </p>
-
         </div>
       </div>
     </section>
+  </section>
+
+  <section class="section section-d" id="section-4">
+    <p></p>
   </section>
 
   <section class="section section-b" id="section-2">
@@ -145,7 +147,9 @@
 
   <a class="gotopbtn" href="#"><i class="fas fa-arrow-up"></i></a>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <!-- Javascript + Animate library-->
+
   <script src="Js/app.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
